--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
   <title>Events App</title>
 </head>
 
-<body>
+<body style="background-color: #f3f3fa;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
